[project]
name = "Flask-Mail"
version = "0.10.0"
description = "Flask extension for sending email"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Dan Jacob" }]
maintainers = [{ name = "Pallets Ecosystem", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "blinker",
]

[project.urls]
Documentation = "https://flask-mail.readthedocs.io"
Changes = "https://flask-mail.readthedocs.io/en/latest/changes/"
Source = "https://github.com/pallets-eco/flask-mail/"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_mail"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flask_mail", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.8"
files = ["src/flask_mail", "tests"]
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = [
    "sqlparse.*"
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.8"
include = ["src/flask_mail", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
